kub/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab
  namespace: homelab
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: homelab
